December ???, 2011 - version 2.2

- MAJOR: added ear training panel. 4 levels available: novice, intermediate, expert and custom 
- notes range extended up to 4 additional lines above and below staff
- notes panel is now cleaned up when repeating an exercise
- fixed silence insertion for different notes types selection

December 1st, 2011 - version 2.1

- if GM soundbank is not present, ask the user to download it from internet
- MIDI input transposition is now based on semitones, to allow more flexibility 
- redesigned MIDI input configuration window
- Line game: fixed potential crash on key release
- updated russian and hungarian translations

November 27th, 2011 - version 2.0

- MAJOR: added exercises panel. This feature includes:
	* Tree listing of previously saved XML exercises
	* preview of the exercise score properly scaled to fit the panel
	* playback of the exercise to listen to it before playing it
	* buttons to start exercising. Score reading can be also interpreted as notes in line
	* exercise editor
		> create any kind of exercise: line, rhythm, score
		> set clef, accidentals, time signature, speed, random feature
		> add notes and pauses to the score and edit the pitch by just pointing and clicking with the mouse
		> previous notes selection
		> last note removal 
		> playback preview of the notes sequence
		> save on XML file
- fixed statistics daily view and empty panel
- fixed resize of home panel when closing another panel

November 13th, 2011 - version 1.0

- NEW: added statistics panel showing monthly and daily views
- line game: added random accidentals exercise
- line game: fixed intervals and chords display
- line game: fixed learning info on altered notes
- line game: fixed accidentals rendering for alto and tenor clef
- line game: added combo box to select how many notes to play on line game
- line game: notes number and progress bar are disabled in learning mode
- line game: can be started by pressing C3