@@ -144,4 +144,4 @@ _levMedium=Intermediate
 _levAdvanced=Expert
 _levCustom=Personal
 _earOctaves=Octaves
-
+_beatAccents=Accents
