@@ -144,3 +144,4 @@ _levMedium=Intermedio
 _levAdvanced=Esperto
 _levCustom=Personale
 _earOctaves=Ottave
+_beatAccents=Accenti
